# pytorch-cpp-example

./: .envrc  CMakeLists.txt  README.md
example-app/: CMakeLists.txt
mnist/: CMakeLists.txt  mnist.cpp
